--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <div class="balloons">🎈 YOU'RE INVITED, ASIA 🎈</div>
   <h1>Lacy's 7th Birthday Bash</h1>
 
-  <img src="https://placekitten.com/300/300" alt="Lacy the cat">
+  <img src="./Lacy.jpg" alt="Lacy the cat">
 
   <h2>Classy Cat</h2>
   <div class="info">
